Fix animation on mobile

--- a/src/components/text-with-media/text-with-media.css
+++ b/src/components/text-with-media/text-with-media.css
@@ -37,7 +37,6 @@
   gap: var(--site-global--spacing-vertical);
   margin: 0 auto;
   max-width: var(--site-width--inner);
-  padding-block-start: var(--site-global--spacing-vertical--wide);
   padding-block-end: var(--site-global--spacing-vertical--wide);
 }
 
@@ -85,5 +84,9 @@
 @media (width > 769px) {
   [data-component-alignment="right"] .text-with-media__inner {
     flex-direction: row-reverse;
+  }
+
+  .text-with-media__inner {
+    padding-block-start: var(--site-global--spacing-vertical--wide);
   }
 }
